# Linko

./: README.md  setup.cfg
src/linko/: __init__.py
src/linko.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: example.py  sitemap.py
