[metadata]
name = linko
version = 0.0.1
author = Monnapse
author_email = monnapse@gmail.com
description = Connect Python and HTML to pass varius Methods.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/monnapse/linko
project_urls =
    Bug Tracker = https://github.com/monnapse/linko/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
